--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eriks-social network-api",
+  "name": "eriks-social-network-api",
   "version": "1.0.1",
   "description": "Mongoose back-end project - Develop",
   "main": "index.js",
